# Upgrad-Masters-ML-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
Assignments/Automatic Ticket Classification Case Study/: .gitignore
Assignments/Capstone - Eye for Blind/: .gitignore
Assignments/Gesture Recognition Case Study/: .gitignore
Assignments/Linear Regression Assignment/: Bike Sharing Demand.ipynb  ReadMe.txt
Assignments/NER/data/input/: test_sent  (+3 more)
Course 2 - Statistics Essentials/: Inferential Statistics.md
Graded Questions/Clustering/: Cricket.ipynb
Graded Questions/EDA/: EDA-UnivariateAnalysis.ipynb  EDA_Gold_Silver_prices.csv  EDA_Gold_Silver_prices.ipynb  Grades.ipynb  NAS.ipynb  grades.csv
Graded Questions/Hypothesis Testing/: Untitled.ipynb
Graded Questions/NER/: NER.ipynb  data.txt
Graded Questions/Naive Bayes/: IMDB_NaiveBayes.ipynb  movie_review_test.csv
Graded Questions/PCA/: Graded_Questions_PCA.ipynb  newhousing.csv
Practice-Projects/: census+data.xlsx
Practice-Projects/Boosting+Adaboost+GradientBoost+XGBoost/: Xgboost-Classification+Example.ipynb
Practice-Projects/CNN/: 1.+Cifar_10_with_dropout_without_BN.ipynb  2.+Cifar_10_Notebook_with_BN_without_dropout.ipynb  3.+Cifar_10_notebook.ipynb  4.+Cifar10_l2_notebook.ipynb  5.+Cifar10_l2_dropout_notebook.ipynb  6.+Cifar10_morelayer_notebook.ipynb  7.+Cifar10_feature_map_updated.ipynb  Building+a+CNN+-+MNIST.ipynb  Reading_Digital_Image.ipynb
Practice-Projects/CNN+Transfer+Learning/: .gitignore
Practice-Projects/Clustering+Python+Lab/: Clustering+Python+Lab.ipynb  Hopkins+Statistic.ipynb
(+148 files in other folders)
