[tool.poetry]
name = "upgrad-masters-ml-ai"
version = "0.1.0"
description = ""
authors = ["Paresh Pradhan"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
pandas = "^1.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.1"
tensorflow = "^2.7.0"
Augmentor = "^0.2.9"
scipy = "^1.7.3"
jupyterlab = "^3.2.4"
xgboost = "^1.5.1"
Pillow = "^8.4.0"
opencv-python = "^4.5.4"
pycrf = "^0.0.1"
sklearn-crfsuite = "^0.3.6"
spacy = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
